{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 117,
  "lineage": "68bca255-d929-eb38-d2b9-d7fe3e3940ad",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terra_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:374104755586:instance/i-023c6a68a6b6ac2ec",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-023c6a68a6b6ac2ec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terrakey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e88417435f40e1ef",
            "private_dns": "ip-172-31-0-234.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.0.234",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00ca4d4b03e79db20",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-07f57565463f08162"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-077272ba7730a3418",
            "tags": {
              "Name": "altschool_project-0",
              "Os": "ubuntu"
            },
            "tags_all": {
              "Name": "altschool_project-0",
              "Os": "ubuntu"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07f57565463f08162"
            ]
          },
          "dependencies": [
            "aws_key_pair.terra_generated_key",
            "aws_security_group.terra_sec",
            "aws_subnet.subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:374104755586:instance/i-0ba2a03b92a23cffd",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ba2a03b92a23cffd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terrakey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05d8fd46baf916eda",
            "private_dns": "ip-172-31-0-231.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.0.231",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-078a0f689c4239ae5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-07f57565463f08162"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-077272ba7730a3418",
            "tags": {
              "Name": "altschool_project-1",
              "Os": "ubuntu"
            },
            "tags_all": {
              "Name": "altschool_project-1",
              "Os": "ubuntu"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07f57565463f08162"
            ]
          },
          "dependencies": [
            "aws_key_pair.terra_generated_key",
            "aws_security_group.terra_sec",
            "aws_subnet.subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:374104755586:instance/i-0989687591187618f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0989687591187618f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terrakey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08ed97a1c9d130544",
            "private_dns": "ip-172-31-0-127.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.0.127",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-058cd802b070b2218",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-07f57565463f08162"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-077272ba7730a3418",
            "tags": {
              "Name": "altschool_project-2",
              "Os": "ubuntu"
            },
            "tags_all": {
              "Name": "altschool_project-2",
              "Os": "ubuntu"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07f57565463f08162"
            ]
          },
          "dependencies": [
            "aws_key_pair.terra_generated_key",
            "aws_security_group.terra_sec",
            "aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "terra_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:374104755586:loadbalancer/app/terra-lb/dcf04e40d7e5f003",
            "arn_suffix": "app/terra-lb/dcf04e40d7e5f003",
            "desync_mitigation_mode": "defensive",
            "dns_name": "terra-lb-2097981541.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:374104755586:loadbalancer/app/terra-lb/dcf04e40d7e5f003",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terra-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07f57565463f08162"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-077272ba7730a3418"
              },
              {
                "subnet_id": "subnet-07fdfb435b3475d5a"
              }
            ],
            "subnets": [
              "subnet-077272ba7730a3418",
              "subnet-07fdfb435b3475d5a"
            ],
            "tags": {
              "Environment": "terra_target"
            },
            "tags_all": {
              "Environment": "terra_target"
            },
            "vpc_id": "vpc-0884586ec29d0d8b3",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.terra_sec",
            "aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "terra_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:374104755586:listener/app/terra-lb/dcf04e40d7e5f003/f6b901111d158a13",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:374104755586:targetgroup/terra-app/44120069b72bd46d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:374104755586:listener/app/terra-lb/dcf04e40d7e5f003/f6b901111d158a13",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:374104755586:loadbalancer/app/terra-lb/dcf04e40d7e5f003",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.terra_lb",
            "aws_lb_target_group.terra_target",
            "aws_security_group.terra_sec",
            "aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "terra_target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:374104755586:targetgroup/terra-app/44120069b72bd46d",
            "arn_suffix": "targetgroup/terra-app/44120069b72bd46d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:374104755586:targetgroup/terra-app/44120069b72bd46d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "terra-app",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0884586ec29d0d8b3"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "terra_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:374104755586:targetgroup/terra-app/44120069b72bd46d-20230202175720251200000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:374104755586:targetgroup/terra-app/44120069b72bd46d",
            "target_id": "i-023c6a68a6b6ac2ec"
          },
          "dependencies": [
            "aws_instance.terra_ec2",
            "aws_key_pair.terra_generated_key",
            "aws_lb_target_group.terra_target",
            "aws_security_group.terra_sec",
            "aws_subnet.subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:374104755586:targetgroup/terra-app/44120069b72bd46d-20230202175720224100000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:374104755586:targetgroup/terra-app/44120069b72bd46d",
            "target_id": "i-0ba2a03b92a23cffd"
          },
          "dependencies": [
            "aws_instance.terra_ec2",
            "aws_key_pair.terra_generated_key",
            "aws_lb_target_group.terra_target",
            "aws_security_group.terra_sec",
            "aws_subnet.subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:374104755586:targetgroup/terra-app/44120069b72bd46d-20230202175720129100000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:374104755586:targetgroup/terra-app/44120069b72bd46d",
            "target_id": "i-0989687591187618f"
          },
          "dependencies": [
            "aws_instance.terra_ec2",
            "aws_key_pair.terra_generated_key",
            "aws_lb_target_group.terra_target",
            "aws_security_group.terra_sec",
            "aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terra_sec",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374104755586:security-group/sg-07f57565463f08162",
            "description": "Allow HTTP and SSH traffic via Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07f57565463f08162",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terra_sec_group",
            "name_prefix": "",
            "owner_id": "374104755586",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0884586ec29d0d8b3"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374104755586:subnet/subnet-077272ba7730a3418",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077272ba7730a3418",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "374104755586",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-0"
            },
            "tags_all": {
              "Name": "subnet-0"
            },
            "vpc_id": "vpc-0884586ec29d0d8b3"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374104755586:subnet/subnet-07fdfb435b3475d5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07fdfb435b3475d5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "374104755586",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-1"
            },
            "tags_all": {
              "Name": "subnet-1"
            },
            "vpc_id": "vpc-0884586ec29d0d8b3"
          }
        }
      ]
    }
  ]
}